--- a/index.html
+++ b/index.html
@@ -1,16 +1,83 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title></title>
-    <script src="js/mui.min.js"></script>
-    <link href="css/mui.min.css" rel="stylesheet"/>
-    <script type="text/javascript" charset="utf-8">
-      	mui.init();
-    </script>
-</head>
-<body>
-	
-</body>
+	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+		<meta name="HandheldFriendly" content="true"/>
+		<meta name="MobileOptimized" content="320"/>
+		<title>首页地图</title>
+		<script src="js/mui.min.js"></script>
+		<script type="text/javascript">
+		var ws=null,wo=null;
+		var em=null,map=null;
+		// H5 plus事件处理
+		function plusReady(){
+			if(!em||ws){return};
+			// 获取窗口对象
+			ws=plus.webview.currentWebview();
+			wo=ws.opener();
+			setTimeout(function(){
+				map=new plus.maps.Map("map");
+				map.centerAndZoom(new plus.maps.Point(116.3977,39.906016),12);
+				createMarker();
+				// 创建子窗口
+				createSubview();
+			},300);
+			// 显示页面并关闭等待框
+		    ws.show("slide-in-right",300);
+		    //wo.evalJS("closeWaiting()");
+		}
+		if(window.plus){
+			plusReady();
+		}else{
+			document.addEventListener("plusready",plusReady,false);
+		}
+		// DOMContentloaded事件处理
+		document.addEventListener("DOMContentLoaded",function(){
+			em=document.getElementById("map");
+			window.plus&&plusReady();
+		},false);
+		function userLocation(){
+			map.showUserLocation( true );
+			map.getUserLocation(function(state,pos){
+				if(0==state){
+					map.setCenter(pos);
+				}
+			});
+		}
+		function createMarker(){
+			var marker=new plus.maps.Marker(new plus.maps.Point(116.347496,39.970191));
+			marker.setIcon("/logo.png");
+			marker.setLabel("HBuilder");
+			var bubble = new plus.maps.Bubble("打造最好的HTML5移动开发工具");
+			marker.setBubble(bubble);
+			map.addOverlay(marker);
+		}
+		function createSubview(){
+			if('Android'!=plus.os.name){
+				return;
+			}
+			var wsub=plus.webview.create('idnex_button.html','sub',{top:'10px',left:'20px', width:'90%',height:'34',position:'absolute',scrollIndicator:'none',background:'transparent'});
+			ws.append(wsub);
+		}
+		function resetMap(){
+			map.centerAndZoom(new plus.maps.Point(116.3977,39.906016),12);
+		}
+		</script>
+		<style type="text/css">
+			#map {
+				width: 100%;
+				position: fixed;
+				left: 0px;
+				top: 0px;
+				bottom: 0px;
+				line-height: 200px;
+				text-align: center;
+				background: #FFFFFF;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="map">地图加载中...</div>
+	</body>
 </html>
